--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       content="https://github.com/Rajesh-Royal/car-bidding-system-react/raw/develop/src/assets/images/CarBiddingProjectImage.png"
     />
 
-    <title>CarBazaar</title>
+    <title>CarBazaar - List of Realtime customers of CarBazaar</title>
   </head>
   <body class="dark:bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
